# polymer-fusion-framework

./: .gitignore  AI_OPTIMIZED_COIL_INTEGRATION_COMPLETE.md  FINAL_INTEGRATION_COMPLETE.md  FUSION_CODE_MIGRATION_SUMMARY.md  METAMATERIAL_RF_LAUNCHER_INTEGRATION_COMPLETE.md  README.md  UQ-TODO-RESOLVED.ndjson  UQ-TODO.ndjson  WEST_BENCHMARKING_COMPLETE.md  WEST_OPTIMIZATION_BREAKTHROUGH.md  polymer-fusion-framework.code-workspace  pyproject.toml  requirements.txt  setup.py
docs/: DYNAMIC_ELM_MITIGATION_INTEGRATION_COMPLETE.md  README.md  TUNGSTEN_FIBER_PFC_INTEGRATION_COMPLETE.md  WEST_IMPLEMENTATION_STATUS.md  technical-documentation.md
polymer-induced-fusion/: FUSION_PHENOMENOLOGY_README.md  LIQUID_METAL_DIVERTOR_INTEGRATION_COMPLETE.md  PLAN_B_STEP_3_BREAKTHROUGH_DOCUMENTATION.md  PLAN_B_STEP_3_LATEX_WRITEUP_COMPLETE.md  ai_optimized_coil_geometry_simulation.py  antimatter_reactor_design.tex  dynamic_elm_mitigation_analysis_report.txt  dynamic_elm_mitigation_simulation.py  economic_analysis_visualizations.py  fusion_phenomenology_simulation_framework.py  liquid_metal_divertor_simulation.py  metamaterial_rf_launcher_simulation.py  test_ai_coil_module.py  test_elm_mitigation_module.py  test_liquid_metal_module.py  test_metamaterial_rf_module.py  test_tungsten_pfc_module.py  tungsten_fiber_pfc_simulation.py  west_optimization_results.py  west_optimization_visualizations.py  west_performance_optimizer.py
polymer-induced-fusion/ai_coil_results/: ai_optimized_coil_analysis_report.txt
polymer-induced-fusion/fusion_phenomenology_results/: comprehensive_fusion_report.txt  west_benchmarking_report.txt
polymer-induced-fusion/liquid_metal_results_from_warp_optimizer/: liquid_metal_analysis_report.txt
polymer-induced-fusion/metamaterial_rf_results_from_warp_optimizer/: metamaterial_rf_analysis_report.txt
polymer-induced-fusion/tungsten_pfc_results/: tungsten_pfc_analysis_report.txt
polymer-induced-fusion/west_optimization_results/: west_optimization_report.txt
