[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymer-fusion-framework"
version = "1.0.0"
description = "Comprehensive framework for polymer-enhanced fusion research"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Polymer Fusion Research Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research", 
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0", 
    "pandas>=1.3.0",
    "sympy>=1.8",
    "jupyter>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5", 
    "myst-parser>=0.15",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0",
    "ipywidgets>=7.6",
]
hts = [
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "numpy>=1.21.0",
]
latex = [
    "pylatex>=1.4.0",
]

[project.scripts]
polymer-fusion = "polymer_induced_fusion.main:main"
hts-analyze = "polymer_induced_fusion.hts_materials_simulation:main" 
reactor-design = "polymer_induced_fusion.plan_a_step5_reactor_design:main"

[project.urls]
Homepage = "https://github.com/polymer-fusion-framework/polymer-fusion-framework"
Documentation = "https://polymer-fusion-framework.readthedocs.io/"
Repository = "https://github.com/polymer-fusion-framework/polymer-fusion-framework.git"
"Bug Tracker" = "https://github.com/polymer-fusion-framework/polymer-fusion-framework/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["polymer_induced_fusion*"]

[tool.setuptools.package-data]
"*" = [
    "*.md",
    "*.txt",
    "*.json", 
    "*.png",
    "*.pdf",
    "*.tex",
    "*.bib",
    "*.csv",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
    "polymer-induced-fusion",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "hts: marks tests related to HTS materials simulation",
    "fusion: marks tests related to fusion physics",
]
